After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733300 - ClutterAnimation: fix memory leak
ClutterAnimation: fix memory leak
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-07-17 08:56 UTC by Giovanni Campagna
Modified: 2014-07-17 14:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ClutterAnimation: fix memory leak (928 bytes, patch)
2014-07-17 08:56 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2014-07-17 08:56:08 UTC
We need to unref the timeline
Comment 1 Giovanni Campagna 2014-07-17 08:56:12 UTC
Created attachment 280924 [details] [review]
ClutterAnimation: fix memory leak
Comment 2 Emmanuele Bassi (:ebassi) 2014-07-17 14:37:56 UTC
Review of attachment 280924 [details] [review]:

looks good.
Comment 3 Giovanni Campagna 2014-07-17 14:43:09 UTC
Attachment 280924 [details] pushed as c167d3a - ClutterAnimation: fix memory leak