ClutterAnimation: fix memory leak

We need to unref the timeline

https://bugzilla.gnome.org/show_bug.cgi?id=733300